--- a/static/index.html
+++ b/static/index.html
@@ -1155,6 +1155,7 @@
         const translate = (key, fallback) => translations[key] || fallback;
         const summaryFile = result.summary_file || metadata.summary_file;
         const summaryPath = summaryFile.includes('/') ? summaryFile : `${detectedLang}/${summaryFile}`;
+        const summaryPath = summaryFile.includes('/') ? summaryFile : `${detectedLang}/${summaryFile}`;
         fetch(`${downloadBase}/${summaryPath}`)
         const summaryPath = summaryFile && summaryFile.includes('/') ? summaryFile : summaryFile;
         const summaryError = result.summary_error || metadata.summary_error;
@@ -1332,7 +1333,7 @@
 
             const downloadLink = document.createElement("a");
             downloadLink.className = "download-link";
-            downloadLink.href = `${downloadBase}/${summaryFile}`;
+            downloadLink.href = `${downloadBase}/${summaryPath}`;
             downloadLink.target = "_blank";
             downloadLink.rel = "noopener";
             downloadLink.textContent = "📄 " + translate("summary_download", "Zusammenfassung herunterladen");
