Fix: Submit form via JS

--- a/static/index.html
+++ b/static/index.html
@@ -607,7 +607,7 @@
 
       <div id="error-container" class="notice error"></div>
 
-      <form id="job-form" method="POST" action="/jobs">
+      <form id="job-form">
         <div class="input-group">
           <label for="videoUrl" data-i18n="video_url_label">Video URL</label>
           <input
