Fix: JavaScript syntax errors in index.html

--- a/static/index.html
+++ b/static/index.html
@@ -1336,7 +1336,7 @@
               downloadLink.href = `${downloadBase}/${summaryPath}`;
               downloadLink.target = "_blank";
               downloadLink.rel = "noopener";
-              downloadLink.textContent = "dY", " + translate("summary_download", "Zusammenfassung herunterladen");
+              downloadLink.textContent = "📄 " + translate("summary_download", "Zusammenfassung herunterladen");
               downloadLink.style.cssText = `
                 margin-top: 16px;
                 display: inline-flex;
